[package]
name = "mcp-github"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "MCP server that lets LLMs interact with GitHub repositories, issues, and pull requests"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mehdig-dev/mcp-github"
homepage = "https://github.com/mehdig-dev/mcp-github"
keywords = ["mcp", "github", "llm", "ai", "devtools"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
exclude = [".github/", ".claude/"]

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
octocrab = "0.44"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
